# led_text_scroller

./: .gitignore  .gitmodules  README.md
android/: .clang-format  BluetoothManager.cpp  BluetoothManager.h  CMakeLists.txt  Main.qml  main.cpp
android/android/: AndroidManifest.xml
arduino/: main.ino  scrolltext_16x32.ino  serial.ino  testcolors_16x32.ino
arduino/main/: main.ino
linux/: CMakeLists.txt
linux/examples/: CMakeLists.txt
linux/examples/include/: CMakeLists.txt
linux/examples/src/: CMakeLists.txt  main.cpp
linux/lib/: CMakeLists.txt
linux/lib/include/: CMakeLists.txt  led_text_scroller.h
linux/lib/src/: CMakeLists.txt  led_text_scroller.cpp
